(lang dune 3.11)

(name swikn)

(generate_opam_files true)

(source
 (github xojoc/swikn))

(authors "Alexandru Cojocaru")

(maintainers "Alexandru Cojocaru")

(license LICENSE)

(documentation https://xojoc.pw)

(package
 (name swikn)
 (synopsis "Swiss army knife")
 (description "Swiss army knife")
 (depends ocaml dune)
 (tags (tool)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
